Made "this" explicit.
It is easy to mistake the this object in nested functions. By making it 
explicit, the issue should not occur as often.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"noImplicitAny": true,
+		"noImplicitThis": true,
 		"target": "es5",
 		"types": [],
 		"lib": ["DOM", "ES2015"],
